// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageInput /> renders correctly 1`] = `
<div
  className="MuiInput-root-16 MuiInput-fullWidth-24 MuiInput-inkbar-18 MuiInput-underline-22"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
>
  <input
    aria-invalid={undefined}
    aria-required={undefined}
    autoComplete={undefined}
    autoFocus={undefined}
    className="MuiInput-input-25"
    defaultValue={undefined}
    disabled={false}
    id={undefined}
    name={undefined}
    onChange={[Function]}
    onKeyDown={undefined}
    onKeyUp={undefined}
    placeholder="Type your message…"
    readOnly={undefined}
    required={undefined}
    rows={undefined}
    type="text"
    value=""
  />
</div>
`;

exports[`<MessageInput /> renders correctly disabled 1`] = `
<div
  className="MuiInput-root-16 MuiInput-disabled-21 MuiInput-fullWidth-24 MuiInput-inkbar-18 MuiInput-underline-22"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
>
  <input
    aria-invalid={undefined}
    aria-required={undefined}
    autoComplete={undefined}
    autoFocus={undefined}
    className="MuiInput-input-25 MuiInput-inputDisabled-27"
    defaultValue={undefined}
    disabled={true}
    id={undefined}
    name={undefined}
    onChange={[Function]}
    onKeyDown={undefined}
    onKeyUp={undefined}
    placeholder="Type your message…"
    readOnly={undefined}
    required={undefined}
    rows={undefined}
    type="text"
    value=""
  />
</div>
`;
